--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "*"
 psycopg2-binary = "*"
 django-import-export = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.8"
