--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 services:
     web:
@@ -6,6 +6,9 @@ services:
         command: python /code/manage.py runserver 0.0.0.0:8000
         volumes:
             - .:/code
+        environment:
+            - SECRET_KEY=mjq6#5l-i^fe9=39d&xv*nl)91k10*n4xw9b!ci7^kq-*r32q$$
+            - DEBUG=1
         ports:
             - 8000:8000
         depends_on: 
@@ -15,7 +18,9 @@ services:
         volumes:
             - postgres_data:/var/lib/postgresql/data/
         environment:
-            - "POSTGRES_HOST_AUTH_METHOD=trust"
+            - POSTGRES_DB=postgres
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
 
 volumes:
     postgres_data:
