--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         volumes:
             - .:/code
         environment:
+            - ENVIRONMENT=development
             - SECRET_KEY=mjq6#5l-i^fe9=39d&xv*nl)91k10*n4xw9b!ci7^kq-*r32q$$
             - DEBUG=1
         ports:
