--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
     web:
         build: .
+        command: python /code/manage.py collectstatic
         command: python /code/manage.py runserver 0.0.0.0:8000
         command: gunicorn iron_project.wsgi -b 0.0.0.0:8000
         environment:
