--- a/heroku.yml
+++ b/heroku.yml
@@ -7,6 +7,6 @@ build:
 release:
     image: web 
     command:
-        - python manage.py collectstatic --noinput 
+        - python manage.py collectstatic  
 run:
     web: gunicorn iron_project.wsgi
