--- a/heroku.yml
+++ b/heroku.yml
@@ -3,10 +3,10 @@ setup:
     - plan: heroku-postgresql 
 build:
     docker:
-        web: Dockerfile 
+        web: Dockerfile
 release:
     image: web 
     command:
         - python manage.py collectstatic --noinput 
 run:
-    web: gunicorn iron_project.wsgi
+    web: gunicorn iron_project.wsgi:application --bind 0.0.0.0:8000
